[gd_scene load_steps=6 format=3 uid="uid://d4ftupd6kcbvh"]

[ext_resource type="Texture2D" uid="uid://c1vgtrlgvd2bs" path="res://assets/ship1.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://clfcwib3672yg" path="res://scripts/controled.gd" id="1_qhqgy"]
[ext_resource type="Texture2D" uid="uid://qo7bm0dyuo8h" path="res://assets/shield.png" id="2_g2els"]
[ext_resource type="Texture2D" uid="uid://ba752hayowk64" path="res://assets/flame.png" id="4_dqkch"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qhqgy"]
radius = 33.0606

[node name="Player" type="Node2D"]
script = ExtResource("1_qhqgy")

[node name="PositionLabel" type="Label" parent="."]
offset_left = -39.0
offset_top = -59.0
offset_right = 40.0
offset_bottom = -30.0

[node name="ship_area" type="Area2D" parent="." groups=["player"]]

[node name="ShipSprite" type="Sprite2D" parent="ship_area"]
texture = ExtResource("1_3vyb7")

[node name="shield" type="Sprite2D" parent="ship_area/ShipSprite"]
position = Vector2(1.66893e-06, 0.500001)
scale = Vector2(1.50769, 1.39063)
texture = ExtResource("2_g2els")

[node name="recovery_time" type="Timer" parent="ship_area/ShipSprite/shield"]
wait_time = 5.0
one_shot = true

[node name="flame" type="Sprite2D" parent="ship_area/ShipSprite"]
position = Vector2(0, -24)
texture = ExtResource("4_dqkch")
offset = Vector2(0, -16)

[node name="ship_colision" type="CollisionShape2D" parent="ship_area"]
shape = SubResource("CircleShape2D_qhqgy")
